--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "24.0.1"
 
     defaultConfig {
-        applicationId "com.example.kangjinho.jijim"
+        applicationId "com.example.kangjinho.jjimstay"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
